# youtube-transcript-pipeline

./: .env.example  .gitignore  pyproject.toml
aiDocs/: changelog.md  context.md  description.md  mvp.md  prd.md
aiDocs/architecture/: 2026-05-13_mvp-architecture.mmd
pipeline/: ingest.py  log.py  progress.py  refresh.py  schema.py  transform.py  utils.py
scripts/: build.sh  dev.sh  lint.sh  run.sh  test.sh  validate_transform.py  validate_transform.sh
tests/: test_ingest.py  test_refresh.py  test_transform.py
tests/fixtures/ingest/: playlist_flat.jsonl
